[package]
name = "bayou"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["cookies", "json", "charset"] }
tokio = { version = "1.36", features = ["full"] }
clap = { version = "4.5", features = ["cargo"] }
serde = { version = "1.0", features = ["derive"] }
ron = { version = "0.8" }
semver = { version = "1.0", features = ["serde"] }
spdx = { version = "0.10", features = ["text"] }
url = { version = "2.5", features = ["serde"] }
color-eyre = { version = "0.6" }
git2 = { version = "0.20" }